<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C9292"
    tools:context=".Rooms">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="@string/select_a_room"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/diamond"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="150dp"
        android:text="@string/diamond"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/luxury"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:text="@string/luxury"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diamond"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/standard"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:text="@string/standard"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luxury"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>